--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
+    "html-docx-js": "^0.3.1",
     "html-to-docx": "^1.8.0",
     "html-to-text": "^9.0.5",
     "react": "^18.3.1",
